@@ -34,6 +34,7 @@ Fixes
     density=True; the keyword was available since 0.19.0 but with incorrect
     semantics and not documented and did not produce correct results (Issue
     #2811, PR #2812)
+  * Class waterdynamics.HydrogenBondLifetimes was removed (PR #2842)
 
 Enhancements
   * Added the RDKitParser which creates a `core.topology.Topology` object from
